--- a/hello.html
+++ b/hello.html
@@ -6,11 +6,8 @@
 </head>
 <body>
     Hello, World! 
-<<<<<<< HEAD
-    <h1>Welcome to My Web Page!!</h1>
-=======
-    <h1 style="color:blue;">Welcome to My Web Page!</h1>
->>>>>>> 218e933a66b58361d3d8a0224c62c86fec65b8cf
+    <h1 style="color:blue;">Welcome to My Web Page!!</h1>
+
     <h2> Hello! <h2>
 </body>
 </html>
